modificado el front para que el premium sea tratado como usuario con privilegio

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -12,6 +12,9 @@
 </div>
 
 <div class="float-end">
+  {{#if isPremium}}
+  <a href="/admin"><button>Panel administracion</button></a>
+  {{/if}}
   <a href="/cart"><button>Carrito</button></a>
   <a href="/chat"><button>Chat</button></a>
 </div>
