--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,7 +1,6 @@
 <h1>Formulario para Agregar Producto</h1>
-<p>
-
-{{user.email}}</p>
+<p id="emailusuario">{{user.email}}</p>
+<p id="roleusuario">{{user.role}}</p>
 
 <form id="agregarForm">
      <label for="titulo">Título:</label>
