--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,6 +1,6 @@
 <h1>Formulario para Agregar Producto</h1>
-<p id="emailusuario">{{user.email}}</p>
-<p id="roleusuario">{{user.role}}</p>
+<p id="emailUsuario">{{user.email}}</p>
+<p id="roleUsuario">{{user.role}}</p>
 
 <form id="agregarForm">
      <label for="titulo">Título:</label>
@@ -45,7 +45,7 @@
     <div id="container">
       <div>
     {{#each products}}
-    <ul>
+    <ul class="product">
         <li>TITULO: {{this.titulo}}</li>
         <li>DESCRIPCION: ${{this.descripcion}}</li>
         <li>code: ${{this.code}}</li>
@@ -53,8 +53,8 @@
         <li><img src="{{this.thumbnail}}`"> </li>
         <li>stock: ${{this.stock}}</li>
         <li>Categoria: {{this.category}}</li>
-        <li>Owner: {{this.owner}}</li>
-        <li>ID: {{this._id}}</li>
+        <li class="owner">{{this.owner}}</li>
+        <li class="productId">{{this._id}}</li>
     </ul>
 
     {{/each}}
@@ -70,6 +70,7 @@
   </div>
 </div>
 <script src="/socket.io/socket.io.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jwt-decode/3.1.2/jwt-decode.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="/js/agregarCarrito.js"></script>
