se logro el last connection

--- a/src/views/userProfile.handlebars
+++ b/src/views/userProfile.handlebars
@@ -35,8 +35,8 @@
           <p><b>All Documents:</b></p>
           <ul>
             {{#each user.documents}}
-              <li>{{this.name}}</li>
-              <li>{{this.reference}}</li>
+              <li>Nombre: {{this.name}}</li>
+              <li>Ruta:{{this.reference}}</li>
             {{/each}}
           </ul>
         </div>
