--- a/src/views/role.handlebars
+++ b/src/views/role.handlebars
@@ -1,7 +1,7 @@
 <h1>Users</h1>
 <ul>
 
-<table class="table">
+<table class="table table-striped">
   <thead>
     <tr>
       <th scope="col">#ID</th>
@@ -12,16 +12,16 @@
       <th scope="col">Delete</th>
     </tr>
   </thead>
-  <tbody class="">
+  <tbody>
     
      {{#each users}}
      <tr>
         <td> <div class="uid">{{this._id}}</div></td>
         <td>{{this.first_name}} {{this.last_name}}</td>
-        <td>{{email}}</td>
+        <td>{{this.email}}</td>
         <td>{{this.role}}</td>
         <td>
-            <button class="btn-primary" type="submit" onctdck="changeRole('{{this.email}}')">Upgrade to premium</button>
+            <button class="btn-primary" type="submit" data-id="{{this._id}}" onclick="changeRole('{{this._id}}', '{{this.email}}')">Upgrade to premium</button>
         </td>
         <td>
             <button class="btn-primary" type="submit">Delete User</button>
@@ -37,5 +37,5 @@
 
 </ul>
 
-<script src="//cdn.jsdetdvr.net/npm/sweetalert2@11"></script>
+
 <script src="/js/userRole.js"></script>
