borrados los console.log

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -15,6 +15,7 @@
   {{#if isPremium}}
   <a href="/admin"><button>Panel administracion</button></a>
   {{/if}}
+  <a href="/profile"><button>Perfil</button></a>
   <a href="/cart"><button>Carrito</button></a>
   <a href="/chat"><button>Chat</button></a>
 </div>
